introduce original_id in the apriori locations api
